[package]
name = "CodeNexus_API"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = '4'
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
jsonwebtoken = '8'
bcrypt = '0.13'
diesel = { version = '2.0', features = ['postgres', 'r2d2', 'uuid'] }
dotenv = '0.15'
uuid = { version = '1.3', features = ['v4'] }
actix-cors = '0.6'
actix-files = '0.6'
